[Windows] DRT is not using the same preferences as the Mac build. https://bugs.webkit.org/show_bug.cgi?id=119822

Reviewed by Darin Adler.

* DumpRenderTree/win/DumpRenderTree.cpp:
(runTest): Process Windows message queue using CFRunLoop to allow
dispatch routines to run properly.
(dllLauncherEntryPoint): Wrap CG-specific setup code in a macro
to prevent problems on WinCairo port.


Canonical link: https://commits.webkit.org/137873@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154198 268f45cc-cd09-0410-ab3c-d52691b4dbfc